# taxer

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  db.rs  docker-compose.example.yml  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
src/: main.rs
src/commands/: add.rs  also_btn.rs  briten.rs  dcl.rs  draken.rs  food.rs  help.rs  kqt.rs  mod.rs  ping.rs  play.rs  qt.rs  satisfaction.rs  text_reaction.rs  unsatstifaction.rs
src/commands/player/: mod.rs  nuke.rs  pause.rs  play.rs  queue.rs  restart.rs  skip.rs  track_event_handler.rs
src/data/: config.rs  mod.rs
src/data/player_data/: guild_channel_id.rs  mod.rs  track_info.rs
