[package]
name = "taxer"
version = "0.1.0"
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
poise = { git = "https://github.com/serenity-rs/poise" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
