[package]
name = "taxer"
version = "0.1.0"
authors = ["j1nxie <rylieeeeexd@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
poise = { version = "0.6.1" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rustc_version_runtime = "0.3.0"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
symphonia = { version = "0.5.4", features = ["aac", "alac", "flac", "mp3", "pcm", "vorbis"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
uuid = "1.10.0"
rustls = "0.23.11"
reqwest = { version = "=0.11.27", features = ["rustls-tls"] }
regex = "1.10.5"

[profile.release]
lto = true
codegen-units = 1
